第二引数に差分比較処理を行う頻度を指定できるように実装